added color to social media icons

--- a/index.html
+++ b/index.html
@@ -22,19 +22,19 @@
     <br>
     <h1 id="logo">Robert Ruelas</h1>
     <div style="text-align: left;"> 
-    <a href="https://www.linkedin.com/in/rruelas87/"><i class="fa fa-linkedin-square" aria-hidden="true" style="width: 25px; height: 25px; color: #999999;"></i>
+    <a href="https://www.linkedin.com/in/rruelas87/"><i class="fa fa-linkedin-square" aria-hidden="true" style="width: 25px; height: 25px; color: rgba(146, 146, 230, 0.837);"></i>
     </a>
-    <a href="https://www.facebook.com/bobby.ruelas/"><i class="fa fa-facebook-square" aria-hidden="true" style="width: 25px; height: 25px; color: #999999;"></i>
+    <a href="https://www.facebook.com/bobby.ruelas/"><i class="fa fa-facebook-square" aria-hidden="true" style="width: 25px; height: 25px; color: rgb(50, 50, 230);"></i>
     </a>
-    <a href="https://www.instagram.com/andvenus/"><i class="fa fa-instagram" aria-hidden="true" style="width: 25px; height: 25px; color: #999999;"></i>
+    <a href="https://www.instagram.com/andvenus/"><i class="fa fa-instagram" aria-hidden="true" style="width: 25px; height: 25px; color: rgb(243, 50, 50);"></i>
     </a>      
-    <a href="https://github.com/oneironaught"><i class="fa fa-github" aria-hidden="true" style="width: 25px; height: 25px; color: #999999;"></i>	
+    <a href="https://github.com/oneironaught"><i class="fa fa-github" aria-hidden="true" style="width: 25px; height: 25px; color: rgb(250, 90, 250);"></i>	
     </a>
 	  <a href="https://music.apple.com/us/artist/and-venus/1335594997"><i class="fa fa-apple" aria-hidden="true" style="width: 25px; height: 25px; color: #999999;"></i>
     </a>
-    <a href="https://open.spotify.com/artist/4CPEqoLO6sSiU3TS6Gygc0?si=2FRH7YnhRWy9Jrrlctkzew"><i class="fa fa-spotify" aria-hidden="true" style="width: 25px; height: 25px; color: #999999;"></i>
+    <a href="https://open.spotify.com/artist/4CPEqoLO6sSiU3TS6Gygc0?si=2FRH7YnhRWy9Jrrlctkzew"><i class="fa fa-spotify" aria-hidden="true" style="width: 25px; height: 25px; color: green;"></i>
     </a>
-    <a href="https://www.youtube.com/@bobbyruelas"><i class="fa fa-youtube-play" aria-hidden="true" style="width: 25px; height: 25px; color: #999999;"></i>
+    <a href="https://www.youtube.com/@bobbyruelas"><i class="fa fa-youtube-play" aria-hidden="true" style="width: 25px; height: 25px; color: red;"></i>
     </a>
     </div>
     <!-- Navigation bar -->
