changes to the education section. created cards

--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
     <!-- Linking CSS -->
     <link rel="stylesheet" type="text/css" href="styles.css">
     <!-- Linking javascript -->
-    <script src="myscript.js"></script>
+    <script src="script.js"></script>
     <!-- Load an icon library -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <!--Favicon-->
     <!--<link rel="shortcut icon" href="https://f4.bcbits.com/img/a1418076414_3.jpg"> -->
-      <!-- Calendly widget script -->
-      <script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js"></script>
+    <!-- Calendly widget script -->
+    <script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js"></script>
 </head>
 <!--Header and Nav-->
 <header>
@@ -143,6 +143,7 @@
 <br>
 <br>
 <br>
+<div class="#experience" id="experience">
 <h2>Experience</h2>
 <div class="experience-section">
     <!-- Apple Job -->
@@ -256,31 +257,46 @@
 <br>
 <!-- Educational Experience Section with Accordion -->
 <h2>Educational Experience</h2>
-<div class="accordion">
-    <div class="accordion-item">
-        <button class="accordion-button">Behavioral Therapist at Rio Grande Valley Behavioral Consultants (Mar 2014 - May 2015)</button>
+<div class="education-section">
+<div class="education-card">
+    <div class="education-info">
+            <h6>Behavioral Therapist</h6>
+            <p>Rio Grande Valley Behavioral Consultants</p>
+            <p>Edinburg, TX | March 2014 - May 2015</p>
+            <button class="accordion-button">View Details</button>
         <div class="accordion-content">
             <p>Implemented a Behavior Intervention Plan and worked with a client diagnosed with Autism Spectrum Disorder.</p>
             <p>Utilized naturalistic observation, verbal operants, reinforcement, and collected and input data.</p>
             <p>During my time, the client successfully learned over 80 verbal operants and showed exponential improvement in social situations.</p>
         </div>
     </div>
+</div>
 
-    <div class="accordion-item">
-        <button class="accordion-button">Research Assistant (Jan 2014 - May 2014)</button>
+    <div class="education-card">
+        <div class="education-info">
+            <h6>Research Assistant</h6>
+            <p>University of Texas Pan American</p>
+            <p>Edinburg, TX | Jan 2014 - May 2014</p>
+        <button class="accordion-button">View Details</button>
         <div class="accordion-content">
             <p>Observed two fish species: The Opaline Gourami and the Three-Spot Gourami using sampling methods including Focal Animal Sampling, All Occurrence Sampling, Scan Sampling (Behavior), and Scan Sampling (Location).</p>
             <p>Each sample was divided into three sets of samples at one-minute intervals, except for Focal Sampling, which followed a random sample sequence.</p>
         </div>
     </div>
+    </div>
 
-    <div class="accordion-item">
-        <button class="accordion-button">Research Assistant (May 2013 - Aug 2013)</button>
+    <div class="education-card">
+        <div class="education-info">
+            <h6>Research Assistant</h6>
+            <p>University of Texas Pan American</p>
+            <p>Edinburg, TX | May 2013 - Aug 2013</p>
+        <button class="accordion-button">View Details</button>
         <div class="accordion-content">
             <p>Participated in bilingual quasi-interviews and administered questionnaires on physical and mental abuse in intimate relationships.</p>
             <p>Assisted with quantitative and qualitative data analysis and completed data entry using Microsoft Excel.</p>
         </div>
     </div>
+</div>
 </div>
 <!-- Portfolio Gallery Grid -->
 <div class="#projects" id="projects">
