added media queries

--- a/index.html
+++ b/index.html
@@ -111,13 +111,9 @@
         <br>
         </h3>
        </div>
+
 <!--Skills section-->
-<div>
-    <div class="#skills" id="skills">
-<br>
-<br>
-<br>
-   
+<div class="#skills" id="skills">  
 <h2>Skills</h2>
 <br>
 <h3>
@@ -143,6 +139,7 @@
 <br>
 <br>
 <br>
+<!-- Experience section-->       
 <div class="#experience" id="experience">
 <h2>Experience</h2>
 <div class="experience-section">
