added aria lables to html

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- Load an icon library -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <!--Favicon-->
-    <!--<link rel="shortcut icon" href="https://f4.bcbits.com/img/a1418076414_3.jpg"> -->
+    <link rel="icon" type="image/x-icon" href="assets/images/favicon.ico">
     <!-- Calendly widget script -->
     <script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js"></script>
 </head>
@@ -405,103 +405,103 @@
     <div class="scroll-container">
       <div class="slider">
         <div class="container">
-            <a href="assets/images/self_1.jpeg">
-                <img src="assets/images/self_1.jpeg" alt="waterwall" class="photos">
+            <a href="assets/images/self_1.jpeg" aria-label="Link to full-size image of the Waterwall in Houston, TX">
+                <img src="assets/images/self_1.jpeg" alt="Waterwall in Houston, TX" class="photos">
               </a>
               <div class="center">
                 <div class="text">Waterwall<br>Houston, TX</div>
               </div>
             </div>
             <div class="container">
-                <a href="assets/images/self_2.jpg">
-                    <img src="assets/images/self_2.jpg" alt="Studio" class="photos">
+                <a href="assets/images/self_2.jpg"aria-label="Link to full-size image of Robert in studio">
+                    <img src="assets/images/self_2.jpg" alt="Studio 956" class="photos">
                 </a>
                 <div class="center">
                     <div class="text">Studio 956</div>
                 </div>
             </div>
             <div class="container">
-              <a href="assets/images/self_3.jpg">
-                  <img src="assets/images/self_3.jpg" alt="Effiel Tower" class="photos">
+              <a href="assets/images/self_3.jpg" aria-label="Link to full-size image of Robert in front of the Effiel Tower">
+                  <img src="assets/images/self_3.jpg" alt="Effiel Tower in Paris, France" class="photos">
               </a>
               <div class="center">
                   <div class="text">Effiel Tower</div>
               </div>
           </div>
           <div class="container">
-            <a href="assets/images/self_4.jpg">
-                <img src="assets/images/self_4.jpg" alt="Red 7 Outdoor" class="photos">
+            <a href="assets/images/self_4.jpg" aria-label="Link to full-size image of Robert perfoming at Red 7 outdoor stage">
+                <img src="assets/images/self_4.jpg" alt="Red 7 Outdoor Stage" class="photos">
             </a>
             <div class="center">
                 <div class="text">Red 7<br>Outdoor Stage</div>
             </div>
         </div>
         <div class="container">
-          <a href="assets/images/self_5.jpg">
-              <img src="assets/images/self_5.jpg" alt="Red 7 Indoor" class="photos">
+          <a href="assets/images/self_5.jpg" aria-label="Link to full-size image of Robert performing at Red 7 indoor stage">
+              <img src="assets/images/self_5.jpg" alt="Red 7 Indoor Stage" class="photos">
           </a>
           <div class="center">
               <div class="text">Red 7 <br>Indoor Stage</div>
           </div>
       </div>
       <div class="container">
-        <a href="assets/images/self_6.jpg">
-            <img src="assets/images/self_6.jpg" alt="Red 7 Logo" class="photos">
+        <a href="assets/images/self_6.jpg" aria-label="Link to full-size image of Robert performing at Red 7 indoor stage">
+            <img src="assets/images/self_6.jpg" alt="Red 7 Logo Image in background" class="photos">
         </a>
         <div class="center">
             <div class="text">Red 7 Logo</div>
         </div>
     </div>
     <div class="container">
-      <a href="assets/images/self_7.jpg">
-          <img src="assets/images/self_7.jpg" alt="Rehearsal" class="photos">
+      <a href="assets/images/self_7.jpg" aria-label="Link to full-size image of Robert rehearsing with band And Venus">
+          <img src="assets/images/self_7.jpg" alt="Rehearsal solo image" class="photos">
       </a>
       <div class="center">
           <div class="text">Rehearsal</div>
       </div>
   </div>
   <div class="container">
-    <a href="assets/images/self_8.jpg">
-        <img src="assets/images/self_8.jpg" alt="Cine" class="photos">
+    <a href="assets/images/self_8.jpg" aria-label="Link to full-size image of Robert performing at Cine El Rey in McAllen, TX">
+        <img src="assets/images/self_8.jpg" alt="Cine El Rey in McAllen, TX" class="photos">
     </a>
     <div class="center">
         <div class="text">Live at Cine el Rey<br>McAllen, TX</div>
     </div>
 </div>
 <div class="container">
-  <a href="assets/images/self_9.jpg">
-      <img src="assets/images/self_9.jpg" alt="Thunderbird" class="photos">
+  <a href="assets/images/self_9.jpg" aria-label="Link to full-size image of Robert performing Thunderbird Coffee Shop in Austin, TX">
+      <img src="assets/images/self_9.jpg" alt="Thunderbird Coffee Shop in Austin, TX" class="photos">
   </a>
   <div class="center">
       <div class="text">Live at Thunderbird Coffee<br>Austin, TX</div>
   </div>
 </div>
 <div class="container">
-  <a href="assets/images/self_10.jpg">
-      <img src="assets/images/self_10.jpg" alt="Paris" class="photos">
+  <a href="assets/images/self_10.jpg" aria-label="Link to full-size image of Robert performing in front of the Effiel Tower in Paris, France">
+      <img src="assets/images/self_10.jpg" alt="Robert performing live in front of Effiel Tower" class="photos">
   </a>
   <div class="center">
       <div class="text">Live in Paris</div>
   </div>
 </div>
 <div class="container">
-  <a href="assets/images/self_11.jpeg">
-      <img src="assets/images/self_11.jpeg" alt="Childhood" class="photos">
+  <a href="assets/images/self_11.jpeg" aria-label="Link to full-size image of Robert as a child in 1990">
+      <img src="assets/images/self_11.jpeg" alt="Childhood photo of Robert" class="photos">
   </a>
   <div class="center">
       <div class="text">1990</div>
   </div>
 </div>
 <div class="container">
-  <a href="assets/images/gatos_team_photo.jpeg">
-      <img src="assets/images/gatos_team_photo.jpeg" alt="Team Photo" class="photos">
+  <a href="assets/images/gatos_team_photo.jpeg" aria-label="Link to full-size image of Robert and his baseball team Los Gatos">
+      <img src="assets/images/gatos_team_photo.jpeg" alt="Los Gatos Team Photo" class="photos">
   </a>
   <div class="center">
       <div class="text">Los Gatos Team Photo</div>
   </div>
 </div>
 <div class="container">
-  <a href="assets/images/gatos_practice.jpeg">
+  <a href="assets/images/gatos_practice.jpeg" aria-label="Link to full-size image of Roberts baseball helmet during practice with baseball team Los Gatos">
       <img src="assets/images/gatos_practice.jpeg" alt="Gatos Practice" class="photos">
   </a>
   <div class="center">
