added privacy and terms page

--- a/index.html
+++ b/index.html
@@ -536,7 +536,7 @@
             <h2>Contact</h2>
             <h3>Thank you for visiting! I'd love to hear from you! 
                 <br>If you have any questions, feedback, or would like to get in touch with me, 
-                <br>please use the form below or reach out <a href="mailto:bobbyruelas@me.com" style="color: gray;">via Email</a> <h3>
+                <br>please use the form below or reach out <a href="mailto:bobbyruelas@me.com" style="color: gray;">via Email</a><h3>
     <div class="calendly-inline-widget" data-url="https://calendly.com/bobbyruelas" style="min-width:320px;height:630px;"></div></section>
 
 <br>
@@ -545,6 +545,7 @@
 <br>
 <br>
 <br>
+</div>
 </body>
 
 <!-- Footer Class-->
