added home link to footer

--- a/index.html
+++ b/index.html
@@ -583,7 +583,7 @@
     </a>
     </div>
     <br>
-    <div style="text-align: center;"><span style="color:#999999;">© 2024 Robert Ruelas</span></div>
+    <div style="text-align: center;"><span style="color:#999999;"><a href="index.html">© 2024 Robert Ruelas</span></a></div>
     <br>
 </footer>
 </html>
