--- a/terms.html
+++ b/terms.html
@@ -146,7 +146,6 @@ Effective Date: 09/12/2024</h2>
 </a>
 </div>
 <br>
-<div style="text-align: center;"><span style="color:#999999;">© 2024 Robert Ruelas</span></div>
-<br>
+<div style="text-align: center;"><span style="color:#999999;"><a href="index.html">© 2024 Robert Ruelas</span></a></div><br>
 </footer>
 </html>
