--- a/privacy.html
+++ b/privacy.html
@@ -145,7 +145,6 @@ If you have any questions or concerns about this Privacy Policy,
 </a>
 </div>
 <br>
-<div style="text-align: center;"><span style="color:#999999;">© 2024 Robert Ruelas</span></div>
-<br>
+<div style="text-align: center;"><span style="color:#999999;"><a href="index.html">© 2024 Robert Ruelas</span></a></div><br>
 </footer>
 </html>
