--- a/index.html
+++ b/index.html
@@ -568,45 +568,51 @@
 <br>
 <br>
         </div>
+</div>
 </section>
 </body>
 
 <!-- Footer Class-->
 <footer class="footer">
-            <!-- Social Media Icons -->
-            <div class="social-icons">
-                <a href="https://www.linkedin.com/in/rruelas87/" aria-label="LinkedIn">
-                    <i class="fa fa-linkedin-square" aria-hidden="true"></i>
-                </a>
-                <a href="https://www.facebook.com/bobby.ruelas/" aria-label="Facebook">
-                    <i class="fa fa-facebook-square" aria-hidden="true"></i>
-                </a>
-                <a href="https://www.instagram.com/andvenus/" aria-label="Instagram">
-                    <i class="fa fa-instagram" aria-hidden="true"></i>
-                </a>      
-                <a href="https://github.com/oneironaught" aria-label="GitHub">
-                    <i class="fa fa-github" aria-hidden="true"></i>
-                </a>
-                <a href="https://music.apple.com/us/artist/and-venus/1335594997" aria-label="Apple Music">
-                    <i class="fa fa-apple" aria-hidden="true"></i>
-                </a>
-                <a href="https://open.spotify.com/artist/4CPEqoLO6sSiU3TS6Gygc0?si=2FRH7YnhRWy9Jrrlctkzew" aria-label="Spotify">
-                    <i class="fa fa-spotify" aria-hidden="true"></i>
-                </a>
-                <a href="https://www.youtube.com/@bobbyruelas" aria-label="YouTube">
-                    <i class="fa fa-youtube-play" aria-hidden="true"></i>
-                </a>
-            </div>
-    
-    <br>
-    <div style="text-align: center;">
-    <a href="terms.html"><span style="color:#999999;"> |&nbsp; </span>Terms of Use |&nbsp;</span>
-    </a>
-    <a href="privacy.html"><span style="color:#999999;"> |&nbsp; </span>Privacy Policy<span style="color:#999999;"> |&nbsp; </span>
-    </a>
+    <!-- Social Media Icons -->
+    <div class="social-icons" style="text-align: center;">
+        <a href="https://www.linkedin.com/in/rruelas87/" aria-label="LinkedIn">
+            <i class="fa fa-linkedin-square" aria-hidden="true"></i>
+        </a>
+        <a href="https://www.facebook.com/bobby.ruelas/" aria-label="Facebook">
+            <i class="fa fa-facebook-square" aria-hidden="true"></i>
+        </a>
+        <a href="https://www.instagram.com/andvenus/" aria-label="Instagram">
+            <i class="fa fa-instagram" aria-hidden="true"></i>
+        </a>      
+        <a href="https://github.com/oneironaught" aria-label="GitHub">
+            <i class="fa fa-github" aria-hidden="true"></i>
+        </a>
+        <a href="https://music.apple.com/us/artist/and-venus/1335594997" aria-label="Apple Music">
+            <i class="fa fa-apple" aria-hidden="true"></i>
+        </a>
+        <a href="https://open.spotify.com/artist/4CPEqoLO6sSiU3TS6Gygc0?si=2FRH7YnhRWy9Jrrlctkzew" aria-label="Spotify">
+            <i class="fa fa-spotify" aria-hidden="true"></i>
+        </a>
+        <a href="https://www.youtube.com/@bobbyruelas" aria-label="YouTube">
+            <i class="fa fa-youtube-play" aria-hidden="true"></i>
+        </a>
     </div>
+
     <br>
-    <div style="text-align: center;"><span style="color:#999999;"><a href="index.html">© 2024 Robert Ruelas</span></a></div>
+
+    <div style="text-align: center;">
+        <a href="terms.html" style="color:#999999;">Terms of Use</a>
+        <span style="color:#999999;"> | </span>
+        <a href="privacy.html" style="color:#999999;">Privacy Policy</a>
+    </div>
+
+    <br>
+
+    <div style="text-align: center;">
+        <span style="color:#999999;">© 2024 Robert Ruelas</span>
+    </div>
+
     <br>
 </footer>
 </html>
