made many changes to fix the format of the education section adjusting both html and css

--- a/index.html
+++ b/index.html
@@ -49,25 +49,9 @@
       </div>
   </div>
 </div>
-       <div class="#about" id="about">
-       <br>
-       <br>
-       <br>
-       <br>
-       <br>
-       <br>
-       <br>
-       <br>
-       <br>
-       <br>
-       <br>
-       <br>
-       <br>
-       <br>
 
- 
-   
 <!--About me section-->       
+<div class="#about" id="about">  
        <h2>About Me</h2>
         <br>
         <br>
@@ -112,8 +96,8 @@
         <br>
         <br>
         <br>
-        </h3>
-       </div>
+</h3>
+</div>
 
 <!--Skills section-->
 <div class="#skills" id="skills">  
@@ -142,8 +126,9 @@
 <br>
 <br>
 <br>
+
 <!-- Experience section-->
-<div id="experience">
+<div class="#experience" id="experience">
     <h2>Experience</h2>
     <div class="experience-section">
         <!-- Apple Job -->
@@ -219,22 +204,24 @@
     </div>
 </div>
 </div>
-
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
 <!--Education section-->
-<div class="#education" id="education"></div>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
+<div class="#education" id="education">
 <h2>Education</h2>
+<br>
+<br>
+<!-- University Education -->
 <div class="education-section">
-    <!-- University Education -->
+    <a href="https://www.utrgv.edu" target="_blank">
     <div class="education-card">
         <div class="education-logo">
             <img src="assets/images/utpa_logo.jpeg" alt="UTPA Logo">
@@ -242,11 +229,13 @@
         <div class="education-info">
             <h6>University of Texas Pan American</h6>
             <p>Edinburg, TX</p>
-            <p>B.A. Psychology</p>
+            <p>B.A. Psychology</p>  
         </div>
-    </div>
-
+    </div>  
+    </a>
+   
     <!-- High School Education -->
+    <a href="https://whs.wisd.us" target="_blank">  
     <div class="education-card">
         <div class="education-logo">
             <img src="assets/images/whs_logo.jpeg" alt="Weslaco High School Logo">
@@ -258,6 +247,15 @@
         </div>
     </div>
 </div>
+</a>
+
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
 <br>
 <br>
 <br>
