--- a/index.html
+++ b/index.html
@@ -248,7 +248,6 @@
     </div>
 </div>
 </a>
-
 <br>
 <br>
 <br>
@@ -314,18 +313,18 @@
 </div>
 </div>
 </div>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
 <!-- Portfolio Gallery Grid -->
 <div class="#projects" id="projects">
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-    <h2>Projects</h2>
+<h2>Projects</h2>
 <!--Projects content-->
 <br>    
 <div class="row">
@@ -402,28 +401,30 @@
           </a>
       </div>
   </div>
-
-      
-      <!-- END GRID -->
-      </div>
+</div>
+</div>  
+<!-- END GRID -->
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
 <!--Images section-->
 <div class="#photos" id="photos">
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
 <div class="photo-section">
     <h2>Photos</h2>
-    <div class="scroll-container">
+    <class="scroll-container">
       <div class="slider">
-        <div class="container">
+        <div class="photo-container">
             <a href="assets/images/self_1.jpeg" aria-label="Link to full-size image of the Waterwall in Houston, TX">
                 <img src="assets/images/self_1.jpeg" alt="Waterwall in Houston, TX" class="photos">
               </a>
@@ -431,7 +432,7 @@
                 <div class="text">Waterwall<br>Houston, TX</div>
               </div>
             </div>
-            <div class="container">
+            <div class="photo-container">
                 <a href="assets/images/self_2.jpg"aria-label="Link to full-size image of Robert in studio">
                     <img src="assets/images/self_2.jpg" alt="Studio 956" class="photos">
                 </a>
@@ -439,7 +440,7 @@
                     <div class="text">Studio 956</div>
                 </div>
             </div>
-            <div class="container">
+            <div class="photo-container">
               <a href="assets/images/self_3.jpg" aria-label="Link to full-size image of Robert in front of the Effiel Tower">
                   <img src="assets/images/self_3.jpg" alt="Effiel Tower in Paris, France" class="photos">
               </a>
@@ -447,7 +448,7 @@
                   <div class="text">Effiel Tower</div>
               </div>
           </div>
-          <div class="container">
+          <div class="photo-container">
             <a href="assets/images/self_4.jpg" aria-label="Link to full-size image of Robert perfoming at Red 7 outdoor stage">
                 <img src="assets/images/self_4.jpg" alt="Red 7 Outdoor Stage" class="photos">
             </a>
@@ -455,7 +456,7 @@
                 <div class="text">Red 7<br>Outdoor Stage</div>
             </div>
         </div>
-        <div class="container">
+        <div class="photo-container">
           <a href="assets/images/self_5.jpg" aria-label="Link to full-size image of Robert performing at Red 7 indoor stage">
               <img src="assets/images/self_5.jpg" alt="Red 7 Indoor Stage" class="photos">
           </a>
@@ -463,7 +464,7 @@
               <div class="text">Red 7 <br>Indoor Stage</div>
           </div>
       </div>
-      <div class="container">
+      <div class="photo-container">
         <a href="assets/images/self_6.jpg" aria-label="Link to full-size image of Robert performing at Red 7 indoor stage">
             <img src="assets/images/self_6.jpg" alt="Red 7 Logo Image in background" class="photos">
         </a>
@@ -471,7 +472,7 @@
             <div class="text">Red 7 Logo</div>
         </div>
     </div>
-    <div class="container">
+    <div class="photo-container">
       <a href="assets/images/self_7.jpg" aria-label="Link to full-size image of Robert rehearsing with band And Venus">
           <img src="assets/images/self_7.jpg" alt="Rehearsal solo image" class="photos">
       </a>
@@ -479,7 +480,7 @@
           <div class="text">Rehearsal</div>
       </div>
   </div>
-  <div class="container">
+  <div class="photo-container">
     <a href="assets/images/self_8.jpg" aria-label="Link to full-size image of Robert performing at Cine El Rey in McAllen, TX">
         <img src="assets/images/self_8.jpg" alt="Cine El Rey in McAllen, TX" class="photos">
     </a>
@@ -487,7 +488,7 @@
         <div class="text">Live at Cine el Rey<br>McAllen, TX</div>
     </div>
 </div>
-<div class="container">
+<div class="photo-container">
   <a href="assets/images/self_9.jpg" aria-label="Link to full-size image of Robert performing Thunderbird Coffee Shop in Austin, TX">
       <img src="assets/images/self_9.jpg" alt="Thunderbird Coffee Shop in Austin, TX" class="photos">
   </a>
@@ -495,7 +496,7 @@
       <div class="text">Live at Thunderbird Coffee<br>Austin, TX</div>
   </div>
 </div>
-<div class="container">
+<div class="photo-container">
   <a href="assets/images/self_10.jpg" aria-label="Link to full-size image of Robert performing in front of the Effiel Tower in Paris, France">
       <img src="assets/images/self_10.jpg" alt="Robert performing live in front of Effiel Tower" class="photos">
   </a>
@@ -503,7 +504,7 @@
       <div class="text">Live in Paris</div>
   </div>
 </div>
-<div class="container">
+<div class="photo-container">
   <a href="assets/images/self_11.jpeg" aria-label="Link to full-size image of Robert as a child in 1990">
       <img src="assets/images/self_11.jpeg" alt="Childhood photo of Robert" class="photos">
   </a>
@@ -511,7 +512,7 @@
       <div class="text">1990</div>
   </div>
 </div>
-<div class="container">
+<div class="photo-container">
   <a href="assets/images/gatos_team_photo.jpeg" aria-label="Link to full-size image of Robert and his baseball team Los Gatos">
       <img src="assets/images/gatos_team_photo.jpeg" alt="Los Gatos Team Photo" class="photos">
   </a>
@@ -519,7 +520,7 @@
       <div class="text">Los Gatos Team Photo</div>
   </div>
 </div>
-<div class="container">
+<div class="photo-container">
   <a href="assets/images/gatos_practice.jpeg" aria-label="Link to full-size image of Roberts baseball helmet during practice with baseball team Los Gatos">
       <img src="assets/images/gatos_practice.jpeg" alt="Gatos Practice" class="photos">
   </a>
@@ -527,8 +528,7 @@
       <div class="text">Los Gatos Practice</div>
   </div>
 </div>
-</div>
-</div>      
+      </div>  
 
 <br>
 <br>
@@ -537,8 +537,7 @@
 <br>
 <br>
 <br>
-</div>
-</div>
+
 <!--Contact Section-->
 <div class="#contact" id="contact">
 <br>
