fixed contact section

--- a/index.html
+++ b/index.html
@@ -528,7 +528,10 @@
       <div class="text">Los Gatos Practice</div>
   </div>
 </div>
-      </div>  
+</div>
+</div>  
+</div>
+</div>
 
 <br>
 <br>
@@ -539,34 +542,18 @@
 <br>
 
 <!--Contact Section-->
-<div class="#contact" id="contact">
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-    <!-- Contact section for Calendly -->
-    <section id="contact" class="text-center py-5">
-        <div class="container">
-            <h2>Contact</h2>
-            <h3>Thank you for visiting! I'd love to hear from you! 
-                <br>If you have any questions, feedback, or would like to get in touch with me, 
-                <br>please use the form below or reach out <a href="mailto:bobbyruelas@me.com" style="color: gray;">via Email</a></h3>
-                    <div class="calendly-inline-widget" data-url="https://calendly.com/bobbyruelas"></div>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
+<div id="contact">
+    <section class="text-center py-5 contact-container">
+        <h2>Contact</h2>
+        <h3>
+            Thank you for visiting! I'd love to hear from you! 
+            <br>If you have any questions, feedback, or would like to get in touch with me, 
+            <br>please use the form below or reach out 
+            <a href="mailto:bobbyruelas@me.com" style="color: gray;">via Email</a>
+        </h3>
+        <div class="calendly-inline-widget" data-url="https://calendly.com/bobbyruelas" style="min-width:320px;height:630px;"></div>
+    </section>
 </div>
-</div>
-</section>
 </body>
 
 <!-- Footer Class-->
