finally fixed the scroll issues for photos section in responsive content

--- a/index.html
+++ b/index.html
@@ -422,7 +422,7 @@
 <div class="#photos" id="photos">
 <div class="photo-section">
     <h2>Photos</h2>
-    <class="scroll-container">
+    <div class="scroll-container">
       <div class="slider">
         <div class="photo-container">
             <a href="assets/images/self_1.jpeg" aria-label="Link to full-size image of the Waterwall in Houston, TX">
