added skills to skill section

--- a/index.html
+++ b/index.html
@@ -70,9 +70,9 @@
         <br>
         As you will note, I am a college graduate from The University of Texas Pan American, and intend on
         <br>
-        pursuing a Masters of Science in Human-Computer Interaction and Human Factors. I have more than 5
+        pursuing a Masters of Science in Human-Computer Interaction and Human Factors. I have more than 10
         <br>
-        years of technical hardware and software experience and over 10 years of customer service.    
+        years of technical hardware/software experience and over 10 years of customer service.    
         <br>
         <br>
         <br>
@@ -105,16 +105,23 @@
 <br>
 <h3>
   <ul>
-    <ul>Experienced in using Microsoft Office and various software applications</ul>
-    <ul>Experienced in repairing Mac and iPhone hardware</ul>
     <ul>Effective team management and leadership skills</ul>
     <ul>Excellent communication and organization skills</ul>
     <ul>Ability to work independently and as part of a team</ul>
+    <ul>Mentorship</ul>
+    <ul>Exceptional technical customer support for Apple products</ul>
     <ul>Strong attention to detail and accuracy</ul>
-    <ul>Proficient in macOS and Microsoft</ul>
-    <ul>Proficient in iOS and Android OS</ul>
-    <ul>Proficient in Python and SwiftUI</ul>
-</ul>
+    <ul>Software-related assistance, including setup, configuration, updates, and conflict resolution</ul>
+    <ul>Front End Developer</ul>
+    <ul>Experienced in repairing Mac and iPhone hardware</ul>
+    <ul>ACMT and ACiT</ul>
+    <ul>Proficient in:</ul> 
+        <ol>HTML, CSS, Javascript</ol>
+        <ol>Python and SwiftUI</ol>
+        <ol>Proficient in macOS and Microsoft</ol>
+        <ol>Proficient in iOS and Android OS</ol>
+        <ol>Proficient in SPSS and R</ol>
+  </ul>    
 </h3>
 <br>
 <br>
