--- a/index.html
+++ b/index.html
@@ -36,9 +36,6 @@
             <a href="#about" class="cta-button">About me</a>
             <a href="#skills" class="cta-button">Skills</a>
             <a href="#experience" class="cta-button">Experience</a>
-
-
-
         </div>
     </section>
 
@@ -109,7 +106,7 @@
     </div>
 
     <!-- Back to Top Button -->
-    <button onclick="topFunction()" id="backToTopBtn" title="Go to top">Top</button>
+    <button onclick="topFunction()" id="backToTopBtn" title="Go to top">Home</button>
 
     <!-- Footer -->
     <footer class="footer">
