added to index. added buttons to hero section

--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@
             <a href="#about" class="cta-button">About me</a>
             <a href="#skills" class="cta-button">Skills</a>
             <a href="#experience" class="cta-button">Experience</a>
+            <a href="#education" class="cta-button">Education</a>
+            <a href="#projects" class="cta-button">Projects</a>
+            <a href="#photos" class="cta-button">Photos</a>
         </div>
     </section>
 
